# xARPES

./: .gitignore  README.md  command  conda_requirements.txt  pyproject.toml  requirements.txt
dev_tools/: Rmd2py.py
doc/: .gitignore  Makefile  conf.py  index.rst  requirements.txt
doc/notebooks/: csro.ipynb  csro__csro__2.ipynb  csro__csro__3.ipynb  csro__csro__4.ipynb  figure3_verification.ipynb  figure4_eliashberg_extraction.ipynb  graphene.ipynb  graphene__graphene.ipynb  graphene__graphene__2.ipynb  graphene__graphene__3.ipynb  graphene__graphene__5.ipynb  graphene__graphene__7.ipynb  graphene__graphene__9.ipynb  srtio3.ipynb  srtio3__srtio3__2.ipynb  srtio3__srtio3__4.ipynb  srtio3__srtio3__7.ipynb  srtio3__srtio3__8.ipynb  toy_correct_fermi_edge_demo.ipynb  toy_correct_fermi_edge_demo__logic_check.ipynb  toy_correct_fermi_edge_demo__logic_check__4.ipynb  toy_correct_fermi_edge_demo__logic_check__7.ipynb  varification_csro.ipynb  verification.ipynb
examples/: Rmd2py.py
examples/csro/: csro.Rmd  csro.py  varification_csro.Rmd  varification_csro.py
examples/fermi_edge/: fermi_edge_example.Rmd  fermi_edge_example.ipynb  fermi_edge_example.py
examples/srtio3/: srtio3.Rmd  (+1 more)
exubi/: __init__.py  band_map.py  distributions.py  functions.py  plotting.py
logo/: Makefile
reproduction/: figure3_verification.Rmd  figure3_verification.py  figure4_eliashberg_extraction.Rmd  figure4_eliashberg_extraction.py
xarpes/: __init__.py  band_map.py  bandmap.py  constants.py  distributions.py  functions.py  plotting.py  selfenergies.py  settings_parameters.py  spectral.py
(+16 files in other folders)
