[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xARPES"
dynamic = ["version", "dependencies"]
authors = [{name = "xARPES Developers"}]
description = "Extraction from angle resolved photoemission spectra"
readme = "README.md"
urls = {Homepage = "https://github.com/xARPES/xARPES"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = ["xarpes"]

[tool.setuptools.dynamic]
version = {attr = "xarpes.__version__"}
dependencies = {file = ["requirements.txt"]}
